Added single game endpoint
